--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model:@blog, local: true , url:new_or_edit) do |f|%>
+<%= form_with(model:@blog, local: true , url: choose_new_or_edit) do |form|%>
 <% if @blog.errors.any?%>
 <div id="error_explanation">
   <h2><%=@blog.errors.count %>件のエラーがあります</h2>
   <ul>
-  <% @blog.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
+  <% @blog.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
   <% end %>
   </ul>
 </div>
