--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -1,9 +1,11 @@
 <h3>以下の内容で、送信する。</h3>
 <%= form_with(model: @blog, local: true) do |form| %>
-  <%= form.hidden_field :title %>
+  <!-- <%= form.hidden_field :title %> -->
   <%= form.hidden_field :content %>
-  <p>タイトル:<%= @blog.title %></p>
+  <%= form.hidden_field :image_cache %>
+  <!-- <p>タイトル:<%= @blog.title %></p> -->
   <p>本文:<%= @blog.content %></p>
+  <%= image_tag(@blog.image.url) if @blog.image && @blog.image.url %>
   <%= form.submit  "登録する" %>
   <%= form.submit "戻る", name: 'back'%>
 <% end %>
