--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,17 +1,19 @@
-<h1><%= current_user.name %>さんのブログ一覧</h1>
+<h1>ブログ一覧</h1>
+<%= link_to "新規作成画面へ", new_blog_path%>
 <table>
   <tr>
-    <th>タイトル</th>
-    <th>内容</th>
     <th>名前</th>
+    <!-- <th>タイトル</th> -->
+    <th>内容</th>
     <th></th>
     <th></th>
   </tr>
   <% @blogs.each do |blog| %>
   <tr>
-    <td><%= blog.title %></td>
-    <td><%= blog.content %></td>
     <td><%= blog.user.name %></td>
+    <!-- <td><%= blog.title %></td> -->
+    <td><%= blog.content %></td>
+    <td><%= image_tag(blog.image.url) if blog.image && blog.image.url %></td>
     <td><%= link_to "詳細画面へ", blog_path(blog.id) %></td>
     <td><%= link_to "編集画面へ", edit_blog_path(blog.id), data:{confirm:'本当に編集してよいですか？'}%></td>
     <td><%= link_to "削除する",blog_path(blog.id),method: :delete, data:{confirm:'本当に削除してよいですか？'}%></td>
